src/css/main.scss
/* ... */
.int-container {
	background-color: #ededed;
	width: 100%;
	position: relative;
  	top: 0;
  	// padding-bottom: 2px;
  	z-index: 100;
}

.story-wrapper {
	height: 100%;
	width: 100%;
	background-color: #fff;

	.intro-visible & {
		position: fixed;
	}
}

.text {
	width: 100%;
	font-size: 18px;
	line-height: 32px;
	color: #333333;
	padding: 0 20px;

	@include mq(desktop) {
		width: calc((980px - 60px) * (4 / 10));
	}

	@include mq(leftCol) {
		width: calc((1140px - 80px) * (1 / 3));
	}

	@include mq(wide) {
		width: calc((1300px - 80px) * (1 / 2.75));
	}

	// hr.sub {
	// 	width: 20%; 
	// 	height: 0;
	// 	margin: 36px 0;
	// 	border: 0;
	// 	border-bottom: 1px solid #dcdcdc;
	// }

	.mobile-alt {
		width: 100%;
		border-radius: 12px;
		background-size: cover;
		margin-top: 24px;
		margin-bottom: 24px;
		background-position: center center;

		&:before {
			content:     "";
		    display:     block;
		    padding-top: 100%;
		}

		@include mq(tablet) {
			width: 60%;
			margin: 48px auto;
		}

		@include mq(desktop) {
			display: none;
		}
	}
}

.text--content {
	padding-top: 80px;
	min-height: 100vh;
	a {
		height: 1px;
		border: 0;
		display: block;
		width: 100%;
	}

	#intro & {
		p {
			opacity: 0;
			transition: 0.6s opacity ease-in;

			&.p-visible {
				opacity: 1;
			}
		}
	}

	img {
		width: 100%;
		margin-top: 24px;
		margin-bottom: 24px;
	}

	.map {
		margin-top: 0;
	}

	h1 {
		font-size: 40px;
		line-height: 44px;
		font-weight: 500;
		margin-top: 0;
		margin-bottom: 48px;
		font-family: $egyptian;
	}
}

#full-intro {
	// height: 100% !important;
}

#chapter-series {
	.large-text {
		font-family: $egyptian;
		font-size: 36px;
		font-weight: 300;
		line-height: 46px;
		color: #bdbdbd;
		padding-left: 20px;
		padding-right: 20px;
		padding-top: 48px;
		max-width: 660px;

		span {
			transition: color 0.5s ease-in;
		}
	}

	.highlight {
		color: #277ea7;
	}
}

.pullquote {
	padding: 12px 0px 12px 0px;
	font-family: $egyptian;
	font-size: 32px;
	color: #aaa;
	line-height: 1.2em;
	width: 100%;
	margin-bottom: 48px !important;
	margin-top: 48px !important;
	font-weight: 400;

	.pullquote-share {
		padding: 8px 0px;
	}
}

.pullquote-credit {
	font-family: $sans;
	font-size: 16px;
	color: #aaa;
	font-weight: 400;
	margin-bottom: 48px !important;
  	margin-top: -54px !important;
}

.right-container {
	width: calc(100vh);
  	height: calc(100vh);
	position: absolute;
	overflow: hidden;
	margin-left: 0px;
	top: 180px;
	display: none;
	transition: opacity 0.3s ease-in-out;
	background-size: cover;
	background-position: center center;
	opacity: 1;
	transform: translateZ(0);
	will-change: opacity, position;

	@include mq(desktop) {
		display: block;
		max-height: calc((980px - 60px) * (6 / 10));
  		max-width: calc((980px - 60px) * (6 / 10));
		right: 0;
		top: 80px;
	}

	@include mq(leftCol) {
		max-height: calc((1140px - 80px) * 0.65);
  		max-width: calc((1140px - 80px) * 0.65);
		right: 0;
	}

	@include mq(wide) {
		max-height: calc((1300px - 80px) * 0.65);
  		max-width: calc((1300px - 80px) * 0.65);
		right: 0;
	}

	&.right-container--sticky {
		position: fixed;
		
		@include mq(desktop) {
			right: calc((100% - 980px)/2);
			top: 0px;
		}

		@include mq(leftCol) {
			right: calc((100% - 1140px)/2);
		}

		@include mq(wide) {
			right: calc((100% - 1300px)/2);
		}
	}

	&.right-container--bottom {
		position: absolute;
		top: inherit;
		bottom: 60px;
	}

	&.visible {
		opacity: 1;
	}

	video {
		height: 100%;
		display: block;
		overflow: hidden;
		background-size: cover;
	}

	img {
		height: 100%;
		display: block;
		overflow: hidden;
	}

	video, img, div {
		position: absolute;
		top: 0;
		left: 0;
		opacity: 1;
	}

	.waiting {
		z-index: 10;
		opacity: 0;
	}

	.top-layer {
		z-index: 9;
		opacity: 1;
	}

	.fade-out {
		opacity: 0 !important;
	}
}

.full {
	width: 100%;
	height: 100vh;
	background-color: #333;
	opacity: 1;
	overflow: hidden;
	position: relative;
	top: 0;
	background-size: 100% 100%;
	background-position: center center;
	background-repeat: no-repeat;
	backface-visibility: hidden;

	.int-main {
		height: 100%;
	}

	.logo {
		width: 160px;
		margin-top: 12px;
	}

	.chapter-intro {
		width: 507px;
		padding: 24px 80px 24px 20px;
		background-color: #ffffff;
		position: absolute;
		bottom: 0;

		h1 {
			font-family: $egyptian;
			font-size: 49px;
			font-weight: 300;
			color: #333;
			line-height: 57px;
			margin: 0;
			padding: 0;
			transition: all 0.6s ease-in-out;
		}

		h2 {
			color: #333;
			margin: 0;
			text-transform: none;
			font-weight: 300;
			font-family: $egyptian;
			font-size: 26px;
			padding-top: 18px;
	  		line-height: 36px;
	  		transition: all 0.3s ease-in-out;
		}

		@include mq(desktop) {
			display: block;
	  		width: calc(980px - ((980px - 60px) * 0.6));
		}

		@include mq(leftCol) {
	  		width: calc(1140px - ((1140px - 80px) * 0.65));
		}

		@include mq(wide) {
	  		width: calc(1300px - ((1300px - 80px) * 0.65));
		}
	}

	.chapter-intro-animate {
		background-color: transparent;

		h1 {
			color: #fff;
		}

		h2 {
			color: #999;
		}
	}

	video {
		width: 100%;
		height: auto;
		position: absolute;
		top: 0px;
		left: 0;

		.non-wide & {
			width: auto;
			height: 100%;
		}
	}

	.video-wrapper {
		top: 0;
		position: absolute;
		left: 0;
		transform: translateZ(0);
	}
}

.video-wrapper {
	width: 100%;
	height: 100%;
	display: block;
	background-size: cover;
	background-repeat: no-repeat;
	transition: opacity 0.3s;
	will-change: opacity;

	.full & {
		border-top: 4px solid #ff9b0b;
	}

	.right-container & {
		background-position: center center;
	}
}
/* ... */

